WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238272
[WebAuthn] Specify correct ASCPublicKeyCredentialKind in configureAssertionOptions
https://bugs.webkit.org/show_bug.cgi?id=238272
Summary
[WebAuthn] Specify correct ASCPublicKeyCredentialKind in configureAssertionOp...
pascoe@apple.com
Reported
2022-03-23 10:54:42 PDT
There was a typo in the refactor creating configureAssertionOptions
Attachments
Patch
(2.81 KB, patch)
2022-03-23 11:00 PDT
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-23 10:54:52 PDT
<
rdar://problem/90710080
>
pascoe@apple.com
Comment 2
2022-03-23 11:00:33 PDT
Created
attachment 455521
[details]
Patch
Brent Fulgham
Comment 3
2022-03-23 11:06:27 PDT
Comment on
attachment 455521
[details]
Patch Oops! r=me
EWS
Comment 4
2022-03-23 12:25:12 PDT
Committed
r291761
(
248791@main
): <
https://commits.webkit.org/248791@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455521
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug