[WebAuthn] Specify correct ASCPublicKeyCredentialKind in configureAssertionOptions https://bugs.webkit.org/show_bug.cgi?id=238272 rdar://problem/90710080

Reviewed by Brent Fulgham.

There was a typo when refactoring code into this method. The kind passed to the function
should be used, instead of always ASCPublicKeyCredentialKindPlatform.

* UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
(WebKit::configureAssertionOptions):



Canonical link: https://commits.webkit.org/248791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291761 268f45cc-cd09-0410-ab3c-d52691b4dbfc